# Mockingbird

./: .gitignore  CMakeLists.txt  Doxyfile  MockingBirdConfig.cmake  README.md  sonar-project.properties
include/: MockingBird.hpp  MockingController.hpp  MockingFunction.hpp  MockingGuard.hpp  Singleton.hpp
source/: MockingController.cpp  MockingGuard.cpp
tests/: CMakeLists.txt  test_MockingController.cpp  test_MockingFunction.cpp
